2000-01-01 Garry R. Osgood <gosgood@idt.net>
	Happy New Year.
	*app/disp_callbacks.c Checked RGB/GRAY/INDEXED combinations
 	RE testing #4708. added gdisplay_update_title() to gdisp_drag_drop().
        so that a display endowed with dropped layers won't 
        continue its insistence on being empty. Nice fix, Sven. 

Sat Jan  1 16:10:32 PST 2000 Manish Singh <yosh@gimp.org>

	* Makefile.am: cosmetic fix

	* libgimp/color_display.h
	* modules/cdisplay_gamma.c: add clone method

	* app/color_area.[ch]
	* app/gdisplay.[ch]
	* app/gdisplay_color.c
	* app/gdisplay_color_ui.c: preliminary support for color_area filter
	(really just a sync to home machine)

	* app/nav_window.c: minor cleanup

	* tools/pdbgen/app.pl: initialize gbooleans to FALSE, not 0

	* tools/pdbgen/lib.pl: some more arg work

Sat Jan  1 23:09:02 CET 2000  Marc Lehmann <pcg@goof.com>

        * app/fileops.c: Use strtoul for hex constants, and cast it back,
        signed hex constants don't make sense otherwise ("0x-5").

Sat Jan  1 22:42:55 CET 2000  Sven Neumann <sven@gimp.org>

	* app/plug-in.c: If image_types == NULL, register plug-in with
	all image_types. Should fix bug #3135.

	* plug-ins/webbrowser/webbrowser.c: register with image_types = NULL

Sat Jan  1 21:05:38 CET 2000  Marc Lehmann <pcg@goof.com>

	* INSTALL: "strip" doc patch by Daniel Egger.

Sat Jan  1 18:54:13 CET 2000  Sven Neumann <sven@gimp.org>

	* app/disp_callbacks.c
	* app/gdisplay.c
	* app/gimage_mask.c
	* app/global_edit.c
	* app/interface.c
	* app/layer.c
	* app/layer.h
	* app/transform_core.c: Removed the obsolete drawable argument from
	layer_from_tiles. The layer_type is now taken from the base_type
	of the image. Also changed the name to layer_new_from_tiles.
	This simplifies some code and finally allows to paste into an empty 
	image, so I've enabled this. Please test this heavily!!
	Should fix bug #4708.
	
	* app/gdisplay_color.c: fixed a compiler warning

Sat Jan  1 17:10:31 CET 2000  Sven Neumann <sven@gimp.org>
