@@ -6,19 +6,20 @@ native Windows, and pre-built binary packages, see
 http://www.iki.fi/tml/gimp/win32/ or
 http://www.gimp.org/~tml/gimp/win32/
 
-To build the GIMP on Win32, you can use either the Microsoft compiler
-or gcc without the produced executables depending on the cygwin dll
-(gcc -mno-cygwin). For more information about the preparation
-necessary for building with gcc, what version you want and where to
-get it, etc, read README.win32 in the GLib 1.3 distribution.
+To build the GIMP on Win32, you can use either Microsoft Visual C++ or
+gcc under cygwin (without the produced executables depending on the
+cygwin dll) (gcc -mno-cygwin). For more information about the
+preparation necessary for building with gcc, what version you want and
+where to get it, etc, read README.win32 in GLib 1.3 (or later). (GLib
+1.3 isn't distributed per se, but available from CVS, and in tml's
+source snapshots.)
 
 The GIMP wants to be built with the GNU "intl" library for
-internationalisation (i18n). Get the version ported to Win32 (not a
-very big deal) from tml's web site mentioned above. We build the
-"intl" library to a DLL called gnu-intl.dll to reduce name clash
-risks. If you don't want any i18n stuff, undefine ENABLE_NLS in the
-config.h.win32 file, and remove references to the gnu-intl library
-from the makefiles.
+internationalisation (i18n). Get the version ported to Win32 from
+tml's web site mentioned above. We build the "intl" library to a DLL
+called gnu-intl.dll to reduce name clash risks. If you don't want any
+i18n stuff, undefine ENABLE_NLS in the config.h.win32 file, and remove
+references to the gnu-intl library from the makefiles.
 
 Note that while the GNU gettext package is under the GPL, the "intl"
 library part as distributed with GNU libc is under the LGPL (like GTk+
